--- a/sp.html
+++ b/sp.html
@@ -234,7 +234,7 @@
 
                     <div class="space-y-8 text-lg text-gray-400 leading-relaxed">
                         <p class="punjabi-text text-3xl text-white font-light italic border-l-4 border-yellow-500 pl-8 mb-12">
-                            "ਸ਼ਰਨ ਪੂਨੀ, ਬੰਗਾ (ਪੰਜਾਬ) ਦਾ ਇੱਕ ਉਭਰਦਾ ਪੰਜਾਬੀ ਕਲਾਕਾਰ ਹੈ, ਜੋ ਆਪਣੀ ਭਾਵੁਕ ਆਵਾਜ਼ ਅਤੇ ਦਿਲ ਨੂੰ ਛੂਹਣ ਵਾਲੇ ਸੰਗੀਤ ਲਈ ਜਾਣਿਆ ਜਾਂਦਾ ਹੈ।"
+                            "ਸ਼ਰਨ ਪੂਨੀ, ਬੰਗਾ (ਪੰਜਾਬ) ਦਾ ਇੱਕ ਉਭਰਦਾ ਪੰਜਾਬੀ ਕਲਾਕਾਰ ਹੈ, ਜੋ ਦਿਲ ਨੂੰ ਛੂਹਣ ਵਾਲੇ ਸੰਗੀਤ ਲਈ ਜਾਣਿਆ ਜਾਂਦਾ ਹੈ।"
                         </p>
 
                         <p>
