--- a/sp.html
+++ b/sp.html
@@ -235,7 +235,7 @@
                 <div class="max-w-2xl text-left">
                     <span class="inline-block px-3 py-1 bg-yellow-500/10 text-yellow-500 text-xs font-bold tracking-[0.3em] uppercase mb-4 border border-yellow-500/20 rounded">Punjabi Music Artist</span>
                     <h1 class="text-6xl md:text-8xl font-extrabold mb-6 leading-[0.9] tracking-tighter text-white text-shadow-lg">Sharan <br><span class="text-yellow-500">Pooni</span></h1>
-                    <div class="mb-8 h-[35px] overflow-hidden">
+                    <div class="mb-8 h-[35px] overflow-hidden text-left">
                         <iframe src="https://bandsintown.com/artist/id_15625448/track_button?actor_type=ARTIST&background_color=rgba(0,180,179,1)&hover_color=rgba(0,180,179,1)&font=Helvetica&bitIcon=show&text=FOLLOW&text_color=rgba(255,255,255,1)&locale=en&display_tracker_count=hide&size=large" title="newsletter-widget" height="35" width="200" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
                     </div>
                     <div class="flex flex-wrap gap-4">
@@ -312,13 +312,13 @@
             <div class="max-w-7xl mx-auto text-left">
                 <div class="grid lg:grid-cols-12 gap-16 text-left">
                     <div class="lg:col-span-5 reveal">
-                        <div class="sticky top-32">
+                        <div class="sticky top-32 text-left">
                             <img src="https://aryasongs.github.io/images/IMG_7943.jpeg" alt="Sharan Pooni" class="w-full rounded-[2.5rem] shadow-2xl grayscale hover:grayscale-0 transition-all duration-700" loading="lazy">
                         </div>
                     </div>
                     <div class="lg:col-span-7 reveal text-left">
                         <h2 class="text-5xl font-extrabold mb-8 text-white uppercase tracking-tighter">Biography</h2>
-                        <div class="space-y-6 text-gray-400 text-lg leading-relaxed">
+                        <div class="space-y-6 text-gray-400 text-lg leading-relaxed text-left">
                             <p class="punjabi-text text-2xl text-white italic border-l-4 border-yellow-500 pl-6 mb-8 uppercase">"ਸ਼ਰਨ ਪੂਨੀ, ਬੰਗਾ (ਪੰਜਾਬ) ਦਾ ਇੱਕ ਉਭਰਦਾ ਪੰਜਾਬੀ ਕਲਾਕਾਰ ਹੈ, ਜੋ ਆਪਣੀ ਭਾਵੁਕ ਆਵਾਜ਼ ਲਈ ਜਾਣਿਆ ਜਾਂਦਾ ਹੈ।"</p>
                             <p>Sharan Pooni, born Gursharan Singh, is an emerging Punjabi music artist from Banga. Known for his debut "Paper" featuring Jass Bajwa, Sharan represents the new wave of soulful Punjabi music.</p>
                             <p>As a singer, lyricist, and producer, he maintains creative control over his sound, blending real-life stories with emotionally rich melodies.</p>
@@ -343,7 +343,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-gray-500 uppercase font-bold tracking-widest">Phone / Manager</p>
-                                    <p class="text-xl font-bold text-white tracking-widest uppercase">+91 79734 18735</p>
+                                    <p class="text-xl font-bold text-white tracking-widest uppercase text-left">+91 79734 18735</p>
                                 </div>
                             </a>
                             
@@ -363,14 +363,14 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-gray-500 uppercase font-bold tracking-widest">Email Booking</p>
-                                    <p class="text-xl font-bold text-white lowercase">sgursharn076@gmail.com</p>
+                                    <p class="text-xl font-bold text-white lowercase text-left">sgursharn076@gmail.com</p>
                                 </div>
                             </a>
                         </div>
                     </div>
 
                     <div class="reveal">
-                        <div class="glass-card p-8 md:p-12 rounded-[2.5rem] border-yellow-500/20">
+                        <div class="glass-card p-8 md:p-12 rounded-[2.5rem] border-yellow-500/20 text-left">
                             <h3 class="text-2xl font-bold mb-8 text-white text-left uppercase tracking-tighter">Booking Form</h3>
                             <form id="booking-form" onsubmit="handleFormSubmit(event)" class="space-y-6 text-left">
                                 <div>
@@ -401,42 +401,77 @@
         </section>
     </main>
 
-    <!-- PRIVACY POLICY PAGE -->
-    <main id="privacy-page" class="page-content py-32 px-6">
-        <div class="max-w-4xl mx-auto text-left">
+    <!-- LEGAL CENTER PAGE (UPDATED) -->
+    <main id="legal-page" class="page-content py-32 px-6">
+        <div class="max-w-5xl mx-auto text-left">
             <button onclick="showPage('home')" class="mb-10 text-yellow-500 font-bold flex items-center gap-2 hover:gap-4 transition-all uppercase tracking-widest text-xs">
                 <i class="fas fa-arrow-left"></i> Back To Home
             </button>
-            <h1 class="text-5xl font-extrabold mb-10 text-white uppercase tracking-tight">Privacy Policy</h1>
-            <div class="glass-card p-10 rounded-3xl space-y-8 text-gray-400 leading-relaxed text-left">
-                <section>
-                    <h2 class="text-xl font-bold text-white mb-4 uppercase tracking-widest text-sm">1. Data Collection</h2>
-                    <p>Hamin aapke dwara booking form mein di gayi jaankari jaise naam, shehar aur event details collect karte hain. Iska istemal sirf booking communication ke liye kiya jata hai.</p>
-                </section>
-                <section>
-                    <h2 class="text-xl font-bold text-white mb-4 uppercase tracking-widest text-sm">2. Usage of Data</h2>
-                    <p>Aapki contact details sirf Sharan Pooni ki management team (SharanRecords) ke saath share ki jati hain.</p>
-                </section>
-            </div>
-        </div>
-    </main>
+            <h1 class="text-5xl md:text-7xl font-extrabold mb-10 text-white uppercase tracking-tight">Legal Center</h1>
+            
+            <div class="grid md:grid-cols-4 gap-8">
+                <!-- Side Nav -->
+                <div class="md:col-span-1 space-y-2">
+                    <a href="#privacy-policy" class="block p-4 bg-white/5 rounded-xl text-xs font-bold uppercase tracking-widest text-yellow-500 border-l-2 border-yellow-500">Privacy Policy</a>
+                    <a href="#terms-of-use" class="block p-4 hover:bg-white/5 rounded-xl text-xs font-bold uppercase tracking-widest text-gray-400">Terms of Use</a>
+                    <a href="#booking-terms" class="block p-4 hover:bg-white/5 rounded-xl text-xs font-bold uppercase tracking-widest text-gray-400">Booking Terms</a>
+                    <a href="#ip-rights" class="block p-4 hover:bg-white/5 rounded-xl text-xs font-bold uppercase tracking-widest text-gray-400">IP Rights</a>
+                </div>
 
-    <!-- TERMS & CONDITIONS PAGE -->
-    <main id="terms-page" class="page-content py-32 px-6">
-        <div class="max-w-4xl mx-auto text-left">
-            <button onclick="showPage('home')" class="mb-10 text-yellow-500 font-bold flex items-center gap-2 hover:gap-4 transition-all uppercase tracking-widest text-xs">
-                <i class="fas fa-arrow-left"></i> Back To Home
-            </button>
-            <h1 class="text-5xl font-extrabold mb-10 text-white uppercase tracking-tight">Terms & Conditions</h1>
-            <div class="glass-card p-10 rounded-3xl space-y-8 text-gray-400 leading-relaxed text-left">
-                <section>
-                    <h2 class="text-xl font-bold text-white mb-4 uppercase tracking-widest text-sm">1. Intellectual Property</h2>
-                    <p>Sharan Pooni se judi sabhi music, images aur branding SharanRecords ki sampatti hain.</p>
-                </section>
-                <section>
-                    <h2 class="text-xl font-bold text-white mb-4 uppercase tracking-widest text-sm">2. Booking Inquiries</h2>
-                    <p>Sabhi bookings management ke saath signed agreement ke baad hi confirm maani jayengi.</p>
-                </section>
+                <!-- Legal Content -->
+                <div class="md:col-span-3 space-y-20 text-gray-400 leading-relaxed text-sm">
+                    <!-- Privacy Section -->
+                    <section id="privacy-policy" class="scroll-mt-32">
+                        <h2 class="text-2xl font-bold text-white mb-6 uppercase tracking-widest">Privacy Policy</h2>
+                        <div class="space-y-4">
+                            <p>Hamari website Sharan Pooni ki privacy ko utna hi mahatva deti hai jitna ham apne fans ki privacy ko. Yeh policy batati hai ki hum aapka data kaise handle karte hain.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">1. Information Collection</h3>
+                            <p>Hum sirf wohi information collect karte hain jo aap humein booking form ke zariye dete hain (Naam, Location, Contact). Hum automated trackers ya unnecessary cookies ka istemal nahi karte.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">2. Data Security</h3>
+                            <p>Aapka data SharanRecords ke secured server par rehta hai. Hum third-party marketing companies ko data kabhi nahi bechte.</p>
+                        </div>
+                    </section>
+
+                    <!-- Terms Section -->
+                    <section id="terms-of-use" class="scroll-mt-32">
+                        <h2 class="text-2xl font-bold text-white mb-6 uppercase tracking-widest">Terms & Conditions</h2>
+                        <div class="space-y-4">
+                            <p>Is website ka upyog karke aap hamare terms se sehmat hote hain.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">1. Content Usage</h3>
+                            <p>Website par maujood music, videos, aur images sirf personal use ke liye hain. Inka commercial istemal ya re-distribution bina SharanRecords ki likhit anumati ke allowed nahi hai.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">2. Website Availability</h3>
+                            <p>Hum bina kisi notice ke website ke features ya tour dates change karne ka adhikaar rakhte hain.</p>
+                        </div>
+                    </section>
+
+                    <!-- Booking Terms -->
+                    <section id="booking-terms" class="scroll-mt-32">
+                        <h2 class="text-2xl font-bold text-white mb-6 uppercase tracking-widest">Booking & Performance Terms</h2>
+                        <div class="space-y-4">
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">1. Confirmation</h3>
+                            <p>Website ke booking form se sirf inquiry hoti hai. Booking tabhi confirm maani jayegi jab 50% advance deposit aur management ke saath official contract sign hoga.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">2. Cancellations</h3>
+                            <p>Agar organizer event cancel karta hai, toh advance deposit non-refundable hoga, jab tak contract mein kuch aur na likha ho.</p>
+                            <h3 class="text-white font-bold mt-4 uppercase text-xs tracking-widest">3. Technical Rider</h3>
+                            <p>Live shows ke liye organizer ko Sharan Pooni ka official technical rider (Sound, Light, Stage) provide karna hoga.</p>
+                        </div>
+                    </section>
+
+                    <!-- IP Rights -->
+                    <section id="ip-rights" class="scroll-mt-32">
+                        <h2 class="text-2xl font-bold text-white mb-6 uppercase tracking-widest">Intellectual Property</h2>
+                        <div class="space-y-4 text-left">
+                            <p>Music labels, artworks, aur "SP" logo SharanRecords aur artist ki Intellectual Property hain. Music identifies as original work protected under Copyright Act 1957.</p>
+                            <p class="text-xs italic">For licensing inquiries: sgursharn076@gmail.com</p>
+                        </div>
+                    </section>
+
+                    <!-- Disclaimer -->
+                    <section id="music-disclaimer" class="scroll-mt-32 pt-10 border-t border-white/5">
+                        <h2 class="text-lg font-bold text-white mb-4 uppercase tracking-widest">Music Rights Disclaimer</h2>
+                        <p class="text-xs">Streaming services (Spotify, Apple Music etc.) provide content under their respective license agreements. Sharan Pooni and SharanRecords are not responsible for streaming availability in specific regions as it is controlled by the platforms.</p>
+                    </section>
+                </div>
             </div>
         </div>
     </main>
@@ -454,8 +489,8 @@
             <div class="space-y-4">
                 <p class="text-gray-400 text-sm font-semibold tracking-wide">&copy; 2025 SharanRecords. All Rights Reserved.</p>
                 <div class="flex justify-center gap-6 text-[10px] text-gray-600 font-bold uppercase tracking-widest">
-                    <a href="javascript:void(0)" onclick="showPage('privacy')" class="hover:text-yellow-500 transition-colors">Privacy Policy</a>
-                    <a href="javascript:void(0)" onclick="showPage('terms')" class="hover:text-yellow-500 transition-colors">Terms & Conditions</a>
+                    <a href="javascript:void(0)" onclick="showPage('legal')" class="hover:text-yellow-500 transition-colors">Legal Center</a>
+                    <a href="javascript:void(0)" onclick="showPage('legal')" class="hover:text-yellow-500 transition-colors">Booking Terms</a>
                 </div>
                 <p class="text-[9px] text-gray-700 uppercase tracking-[0.3em] pt-4">Label Credit: SharanRecords</p>
             </div>
@@ -469,14 +504,12 @@
         // Modern Preloader Hiding logic
         window.addEventListener('load', () => {
             const preloader = document.getElementById('preloader');
-            // Wait for animations to finish before unveiling
             setTimeout(() => {
                 preloader.classList.add('loaded');
-                // Allow interactions after transition
                 setTimeout(() => {
                     document.body.style.overflow = 'auto';
                 }, 1200);
-            }, 2500); // 2.5s for a cinematic feel
+            }, 2500);
         });
 
         function showPage(pageId) {
