--- a/Games.html
+++ b/Games.html
@@ -71,7 +71,7 @@
             <div class="z-10">
                 <span class="text-xs font-bold tracking-[0.4em] text-gray-500 uppercase block mb-4">Latest Single • 2026</span>
                 <h1 class="syne text-7xl md:text-9xl font-extrabold leading-[0.9] tracking-tighter mb-6">
-                    JUDDA<br><span class="text-neutral-700">JEENA</span>
+                    JUDAA<br><span class="text-neutral-700">JEENA</span>
                 </h1>
                 <p class="text-gray-400 max-w-md text-lg mb-8 leading-relaxed">
                     Sharan Pooni returns with a hauntingly beautiful melody featuring Zeenat Bhagat. Out now on all platforms.
