--- a/Games.html
+++ b/Games.html
@@ -90,7 +90,7 @@
                     <img src="https://images.unsplash.com/photo-1493225255756-d9584f8606e9?auto=format&fit=crop&q=80&w=1000" alt="Judda" class="w-full h-full object-cover opacity-60 group-hover:scale-105 transition-transform duration-1000">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
                     <div class="absolute bottom-10 left-10">
-                        <h2 class="syne text-3xl uppercase tracking-widest">Judda</h2>
+                        <h2 class="syne text-3xl uppercase tracking-widest">Judaa</h2>
                         <p class="text-gray-400">Sharan Pooni ft. Zeenat Bhagat</p>
                     </div>
                 </div>
