--- a/Games.html
+++ b/Games.html
@@ -87,7 +87,7 @@
             </div>
             <div class="relative">
                 <div class="aspect-square bg-neutral-900 rounded-3xl overflow-hidden shadow-2xl border border-white/10 group">
-                    <img src="https://images.unsplash.com/photo-1493225255756-d9584f8606e9?auto=format&fit=crop&q=80&w=1000" alt="Judda" class="w-full h-full object-cover opacity-60 group-hover:scale-105 transition-transform duration-1000">
+                    <img src="https://images.unsplash.com/photo-1493225255756-d9584f8606e9?auto=format&fit=crop&q=80&w=1000" alt="Judaa" class="w-full h-full object-cover opacity-60 group-hover:scale-105 transition-transform duration-1000">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
                     <div class="absolute bottom-10 left-10">
                         <h2 class="syne text-3xl uppercase tracking-widest">Judaa</h2>
