--- a/qr.html
+++ b/qr.html
@@ -173,7 +173,7 @@ footer span {
         <div class="details">
             <div>
                 <span class="label">Certificate ID</span>
-                ORT-2026-INMOL-001
+                ORT-2026-ANMOL-001
             </div>
             <div>
                 <span class="label">Certificate Type</span>
@@ -181,7 +181,7 @@ footer span {
             </div>
             <div>
                 <span class="label">Issued To</span>
-                Mr. Inmol Sunda
+                Mr. Anmol Sunda
             </div>
             <div>
                 <span class="label">Organization</span>
